[package]
name = "feed-forward"
version = "0.1.0"
authors = ["Greg Tatum <tatum.creative@gmail.com>"]
edition = "2018"

[dependencies]
term-painter = { workspace = true }
byteorder = { workspace = true }
rand = { workspace = true }

[[bin]]
name = "output-mnist-images"
path = "bin/output-mnist-images.rs"
